# pdf-img-extract

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: check.yml  deploy-pages.yml
cli/: Cargo.toml  README.md
cli/src/: file_names.rs  main.rs  page_ranges.rs
extract/: Cargo.toml  README.md
extract/src/: lib.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  create-elapsed-timer.ts  create-extractor.ts  extractor-view.ts  index.css  user-input.ts
web/src/components/: AppLayout.tsx  ErrorsList.tsx  ExtractActions.tsx  IdleInputEmpty.tsx  IdleInputSelected.tsx  PdfChangeButtonField.tsx  PdfDropzoneField.tsx  PdfField.tsx  RangeField.tsx  ResultsGrid.tsx  RunElapsed.tsx  RuntimeErrorMessage.tsx  ScreenIdle.tsx  ScreenResult.tsx  SelectedPdf.tsx
web/src/components/ui/: alert-dialog.tsx  button.tsx  text-field.tsx
web/src/extract/: download-zip.ts  file-names.ts  index.ts  models.ts  page-range.ts  worker-interface.ts  worker.ts
