[workspace]
resolver = "2"
members = ["extract", "wasm", "cli"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
hayro-interpret = { version = "0.5.0", default-features = false }
hayro-syntax = { version = "0.5.0" }
image = { version = "0.25.9", default-features = false }
kurbo = "0.12.0"
thiserror = "2.0.18"
